# Item-management-system

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/item-management-system/: main.py  sql_app.db
src/sql_app/: __init__.py  crud.py  database.py  models.py  schemas.py
